[tool.poetry]
    name         = "advent24"
    version      = "0.1.0"
    description  = "Advent of Code 2024"
    authors      = ["Giovanni Squillero <squillero@polito.it>"]
    license      = "NOT FOR SHARING"
    readme       = "README.md"
    package-mode = false

    [tool.poetry.dependencies]
        python   = "^3.13"
        icecream = "^2.1.3"
        numpy    = "^2.2.1"
    tqdm = "^4.67.1"

[build-system]
    requires      = ["poetry-core"]
    build-backend = "poetry.core.masonry.api"
