# Advent of Code 2024 | https://adventofcode.com/2024/day/9
# Copyright 2024 by Giovanni Squillero
# SPDX-License-Identifier: 0BSD

[tool.poetry]
    name         = "AoC"
    version      = "0.1.0"
    description  = "Advent of Code"
    authors      = ["Giovanni Squillero <squillero@polito.it>"]
    license      = "0BSD"
    readme       = "README.md"
    package-mode = false

    [tool.poetry.dependencies]
        python   = "^3.13"
        icecream = "^2.1.3"
        numpy    = "^2.2.1"
        tqdm     = "^4.67.1"

[tool.ruff]
    target-version = "py313"

    [tool.ruff.lint]
        ignore = ['E741']

[build-system]
    requires      = ["poetry-core"]
    build-backend = "poetry.core.masonry.api"
