# Advent of Code | https://adventofcode.com/
# Copyright 2024-25 by Giovanni Squillero
# SPDX-License-Identifier: 0BSD

[project]
    name            = "AoC"
    version         = "2025"
    authors         = [{ name = "Giovanni Squillero", email = "squillero@polito.it" }]
    license         = "0BSD"
    description     = "The annual set of Christmas-themed computer programming"
    readme          = "README.md"
    requires-python = ">=3.14"
    dependencies    = ["icecream>=2.1.8", "numpy>=2.3.5", "tqdm>=4.67.1"]

[tool.ruff]
    target-version = "py313"
    line-length    = 90

    [tool.ruff.format]
        quote-style = "preserve"

    [tool.ruff.lint]
        ignore = ['E741']
