# Advent of Code | https://adventofcode.com/
# Copyright 2024-25 by Giovanni Squillero
# SPDX-License-Identifier: 0BSD

[project]
    name        = "AoC"
    authors     = [{ name = "Giovanni Squillero", email = "squillero@polito.it" }]
    license     = "0BSD"
    version     = "0.1.0"
    description = "Advent of Code"
    readme      = "README.md"

[tool.poetry]
    package-mode = false

    [tool.poetry.dependencies]
        python   = "^3.13"
        icecream = "^2.1.3"
        numpy    = "^2.2.1"
        tqdm     = "^4.67.1"

[tool.ruff]
    target-version = "py313"
    line-length    = 90

    [tool.ruff.format]
        quote-style = "preserve"

    [tool.ruff.lint]
        ignore = ['E741']
